[package]
name = "test_no_std"
version = "0.1.0"
authors = ["NguyenHoangTrieu <nguyentrieu.work@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-backtrace = { version = "0.16.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.14.0", features = [
    "esp32",
    "log-04",
] }
esp-bootloader-esp-idf = "0.1.0"
embassy-executor = "0.7.0"
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.8.0", features = ["esp32"] }
embassy-sync = "0.7.1"
static_cell = "2.1.1"
critical-section = "1.2.0"
nb = "1.1.0"
embedded-hal-nb = "1.0.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
